@@ -133,8 +133,9 @@ display: table; table-layout: auto; border-collapse: separate; empty-cells: show
 .form-header-row { display: table-row; }
 .form-header-cell { display: table-cell; text-align: left; padding: 0px 4px 0px 2px; }
 .form-body { display: table-row-group; }
-.form-row { display: table-row; background-color: #FFF; }
-.form-cell { display: table-cell; padding: 0px 4px 0px 2px; font-size: 1em; }
+.form-row { display: table-row; background-color: #FFF; vertical-align: middle; }
+.form-cell { display: table-cell; padding: 0px 4px 0px 2px; font-size: 1em; vertical-align: middle; }
+.form-cell span { display: block; }
 .form-bottom-row { display: table-caption; caption-side: bottom; text-align: left; vertical-align: middle; width: 100%; }
 .form-row:nth-child(odd) { background-color: #EEE; }
 /* .form-row:nth-child(even) { background-color: #FFF; } */
@@ -152,6 +153,9 @@ display: table; table-layout: auto; border-collapse: separate; empty-cells: show
 a.form-order-by { margin: 0px; padding: 0px; font-family: "Courier New", monospace; font-weight: bold; font-size: 1.2em; vertical-align: top; }
 a.form-order-by:hover { color: blue; }
 a.active { color: red; }
+
+.form-cell .BigDecimal, .form-cell .Long, .form-cell .Double, .form-cell .Float, .form-cell .Integer { text-align: center; }
+.form-cell .currency { text-align: right; }
 
 /* ======================= Screen-specific ======================= */
 
